CSV output with intermediate ingredients and support for aggregation events
